# veil

./: .gitignore  CODEGEN_PLAN.md  CODEGEN_PLAN_EXEC.md  Cargo.toml  MISSION.md  Makefile
.claude/: settings.local.json.tmp.1315210.efb9b8cea9ff
.github/: pull_request_template.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-07-01T16-30-03-791Z.yml  page-2026-07-01T16-32-30-523Z.yml  page-2026-07-01T16-33-27-500Z.yml  page-2026-07-01T16-34-15-436Z.yml
crates/veil-cli/: Cargo.toml
crates/veil-cli/src/: main.rs  serve.rs
crates/veil-cli/tests/: fk_refs.rs
crates/veil-codegen/: Cargo.toml
crates/veil-ir/: Cargo.toml
crates/veil-ir/src/: adapt.rs  ast.rs  builder.rs  check.rs  context.rs  coverage.rs  deps.rs  diagnostics.rs  edit.rs  escape.rs  ir.rs  layer.rs  layer_graph.rs  lib.rs  names.rs  presentation.rs  project.rs  resolve.rs  serialize.rs  span.rs  struct_diff.rs  test_lint.rs  typecheck.rs  validate.rs
crates/veil-local/: Cargo.toml
crates/veil-local/src/: ddb.rs  http.rs  lib.rs  meta.rs  object.rs  s3.rs
crates/veil-parser/: Cargo.toml
crates/veil-parser/src/: lexer.rs  lexer_tests.rs  lib.rs  parser.rs  parser_tests.rs
crates/veil-parser/tests/: page_template_raw.rs  roundtrip_suite.rs
crates/veil-server/: Cargo.toml
crates/veil-server/src/: acp.rs  aether_chat.rs  agent.rs  agent_context.rs  agent_runtime_tools.rs  agent_stream.rs  api.rs  chat_log.rs  config.rs  devloop.rs  devloop_api.rs  file_ops.rs  layer_edit.rs  lib.rs  mcp.rs  mind_palace_tools.rs  model.rs  product_host.rs  project_layout.rs  protocol.rs  revision.rs  rig_tools.rs  safety.rs
crates/veil-server/src/provider/: filesystem.rs  hub.rs  mod.rs  remote.rs
deploy/: Dockerfile
docs/: ACP_SPIKE.md  ADAPT.md  ADR-viewer-editors.md  AGENT.md  ARCHITECTURE.md  BANG_CONTRACT.md  CAPABILITIES.md  CODEGEN_TEMPLATES.md  COMPILE_PIPELINE.md  EFFECTS.md  ENGINE.md  EXTENSIONS.md  EXTENSIONS_AWS.md  EXTENSIONS_UI_SLOTS.md  HARNESS.md  IDE_AGENT_PLATFORM.md  IDE_RUNTIME.md  LANGUAGE.md  LAYERS_DSL.md  LAYER_PROMPTS.md  METRICS.md  MIND_PALACE.md  OWNERSHIP.md  PACKAGE_TARGETS.md  POLICY_ROLES.md  PRESENTATION.md  PROJECT_LAYOUT.md  PURE_RUNTIME.md  RUNTIME_CAPABILITIES.md  RUNTIME_PROMPT.md  SEMANTIC_IR.md  SERIALIZE.md  SERVER.md  STORAGE.md  UI_IR.md  VCS_MODEL.md
examples/: compose_onboarding.veil  crm.layer  customer_onboarding.veil  customer_portal.veil  ddd.layer  ddd_kit.veil  di.layer  di_example.veil  dlx_core.layer  dlx_core.veil  hello_world.veil  local_run.veil  onboarding_kit.veil  pure_lib.veil  reqwest.stub  sales_crm.veil  sqlx.stub  svelte_present_demo.veil  ui_view_demo.veil  wear_test.layer  wear_test.veil
examples/adapt/: client.veil  stock.veil
fixtures/ladder/: README.md
fixtures/multi_harness/: README.md  platform.veil  product.veil  veil.toml
fixtures/palace_contracts/: README.md  (+10 more)
layers/: auth_local.layer  aws_storage.layer  base.layer  bus_handle.layer  ddd.layer  di.layer  functional.layer  harness.layer  rest_english.layer  rest_rpc.layer  rig.layer  rust.layer  svelte5.layer  sveltekit5.layer  transports.layer  ui.layer
output/: Cargo.toml
output/crates/billing/: Cargo.toml  manifest.json
output/crates/billing/src/: lib.rs
output/crates/billing/src/adapters/: mod.rs
output/crates/billing/src/application/: mod.rs
output/crates/billing/src/domain/: messages.rs  types.rs
output/crates/billing/src/ports/: mod.rs
output/crates/identity/: Cargo.toml  manifest.json
output/crates/identity/src/: lib.rs
output/crates/identity/src/adapters/: mod.rs
output/crates/identity/src/application/: mod.rs
output/crates/identity/src/domain/: messages.rs  types.rs
output/crates/identity/src/ports/: mod.rs
output/crates/onboarding/: Cargo.toml
output/crates/onboarding/src/: lib.rs
output/crates/onboarding/src/adapters/: mod.rs
output/crates/onboarding/src/application/: mod.rs
output/crates/onboarding/src/domain/: messages.rs  types.rs
output/crates/onboarding/src/ports/: mod.rs
output/crates/veil_shared/: Cargo.toml
output/crates/veil_shared/src/: lib.rs
runtime/: README.md
runtime/bootstrap/: Cargo.toml  README.md
runtime/bootstrap/src/: local_ports.rs  main.rs  platform.rs
runtime/bootstrap/static/: ide.html  index.html
runtime/bootstrap/static/app/: README.md  index.html  package.spa.json
runtime/bootstrap/static/app/scripts/: bundle-spa.sh
runtime/bootstrap/static/app/src/: index.ts  interfaces.ts  services.ts  spa.js  types.ts
runtime/bootstrap/static/app/src/components/: Agents.svelte  AgentsView.svelte  AppLayout.svelte  Bus.svelte  BusView.svelte  Config.svelte  ConfigView.svelte  Dashboard.svelte  DashboardView.svelte  Deploy.svelte  DeployView.svelte  ProjectCard.svelte  Projects.svelte  ProjectsView.svelte  Registry.svelte  RegistryView.svelte  Sidebar.svelte  StatCard.svelte  StatusBar.svelte
runtime/bootstrap/static/legacy/: README.md  ide.html  index.redirect.html
runtime/bootstrap/static/runtime-ui-gen/: package.json
runtime/bootstrap/static/runtime-ui-gen/src/: index.ts
runtime/ext_store/: Cargo.toml
runtime/ext_store/src/: lib.rs
scripts/: invariant_allowlist.txt  invariant_hygiene.sh  pure_runtime_smoke.sh  run_local_example.sh  seed_mind_palace.sh  seed_mind_palace_parse.py  serve-ide-hub.sh  sync-git-deps.sh
stories/: 00-review-findings.md  00-ux-catchup.md  01-match.md  02-for-loop.md  03-while-loop.md  04-closures.md  05-let-mut.md  06-10-types.md  10-check-loop.md  100-ide-agent.md  11-async.md  110-layer-dsl-ide.md  12-generics.md  120-projects-config-init.md  130-runtime-ux-audit.md  140-pure-veil-runtime.md  141-pure-runtime-capability-gaps.md  150-package-adapt.md  160-agent-runtime-observability.md  170-agent-complexity-shoreup.md  180-veil-extensions.md  20-serialize-edit.md  30-viewer-review.md  35-layer-presentation.md  40-viewer-restructure.md  50-invariant-debt.md  60-codegen-targets.md  70-runtime-harness.md  80-runtime-platform.md  90-parity-future.md  README.md
veil-viewer/: README.md  package-lock.json  package.json  vite.config.ts
(+97 files in other folders)
