[workspace]
members = [
    "crates/veil-parser",
    "crates/veil-ir",
    "crates/veil-codegen",
    "crates/veil-server",
    "crates/veil-cli",
    "crates/veil-local",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["JD Williams"]

[workspace.dependencies]
# Parser
winnow = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# CLI
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Agentic LLM stack (AGT-*)
rig-core = "0.39"

# HTTP (RT-026 — S3, remote SourceStore)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Dev-loop orchestrator
toml = "0.8"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

# Internal
veil-parser = { path = "crates/veil-parser" }
veil-ir = { path = "crates/veil-ir" }
veil-codegen = { path = "crates/veil-codegen" }
veil-server = { path = "crates/veil-server" }
