[package]
name = "veil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VEIL command-line interface"

[[bin]]
name = "veil"
path = "src/main.rs"

[dependencies]
veil-parser.workspace = true
veil-ir.workspace = true
veil-codegen.workspace = true
veil-server.workspace = true
clap.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
miette = { workspace = true, features = ["fancy"] }
tempfile = "3"
