[package]
name = "veil-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "VEIL AST, IR graph model, and validation"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
miette.workspace = true
