[package]
name = "veil-local"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Local platform adapters — filesystem object store, content hashes (RT-010/012)"

[dependencies]
sha2 = "0.10"
hex = "0.4"
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile = "3"
