[package]
name = "veil-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared dev server for VEIL — serves IR, palette, edits to the viewer"

[dependencies]
veil-parser.workspace = true
veil-ir.workspace = true
veil-codegen.workspace = true
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait = "0.1"
rig-core.workspace = true
thiserror.workspace = true
reqwest.workspace = true
futures-util = "0.3"
toml.workspace = true
notify.workspace = true

# Mind Palace (optional wiki tools) — https://github.com/jdwil/mind-palace
mind-palace = { git = "https://github.com/jdwil/mind-palace" }
mind-palace-rig = { git = "https://github.com/jdwil/mind-palace" }
