[package]
name = "veil-runtime-bootstrap"
version = "0.1.0"
edition = "2024"
description = "Local product host: multi-project IDE kernel + Bus HTTP"

[[bin]]
name = "veil-runtime"
path = "src/main.rs"

[dependencies]
veil-server = { path = "../../crates/veil-server" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["local"]
local = []

[workspace]
members = ["."]
