[package]
name = "veil_ext_store"
version = "0.1.0"
edition = "2021"
description = "Extension registry/source/artifact store for VEIL adapters (file or AWS)"

[dependencies]
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aws-config = { version = "1", optional = true }
aws-sdk-dynamodb = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["file"]
file = []
aws = ["aws-config", "aws-sdk-dynamodb", "aws-sdk-s3"]
