[package]
name = "onboarding"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
serde_json.workspace = true
veil_shared = { path = "../veil_shared" }
